tests/purs/failing/DeclConflictClassSynonym.purs
-- @shouldFailWith DeclConflict
module Main where

import Prelude

type Fail = Unit

class Fail
